--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.version>3.3.4</spring-boot.version>
+        <spring-boot.version>3.4.11</spring-boot.version>
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -34,11 +35,31 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- Dodajte Spring Cloud BOM -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>3.3.4</version>
+                <version>3.5.7</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>9.5.0</version>
+            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>org.mariadb.jdbc</groupId>-->
+            <!--                <artifactId>mariadb-java-client</artifactId>-->
+            <!--                <version>3.5.6</version>-->
+            <!--            </dependency>-->
+
         </dependencies>
     </dependencyManagement>
 
