--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- Dodajte Spring Cloud BOM -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -48,21 +47,13 @@
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>3.5.7</version>
             </dependency>
-
             <dependency>
-                <groupId>com.mysql</groupId>
-                <artifactId>mysql-connector-j</artifactId>
-                <version>9.5.0</version>
+                <groupId>org.mariadb.jdbc</groupId>
+                <artifactId>mariadb-java-client</artifactId>
+                <version>3.5.6</version>
             </dependency>
-            <!--            <dependency>-->
-            <!--                <groupId>org.mariadb.jdbc</groupId>-->
-            <!--                <artifactId>mariadb-java-client</artifactId>-->
-            <!--                <version>3.5.6</version>-->
-            <!--            </dependency>-->
-
         </dependencies>
     </dependencyManagement>
-
     <build>
         <plugins>
             <plugin>
