--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,24 +40,25 @@ services:
       - enadzornik-network
     restart: on-failure
 
-#  material-service:
-#    build:
-#      context: ./material-service
-#      dockerfile: Dockerfile
-#    container_name: enadzornik-material-service
-#    ports:
-#      - "8084:8084"
-#    environment:
-#      SPRING_DATASOURCE_URL: jdbc:mariadb://mariadb:3306/enadzornik?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#      SPRING_DATASOURCE_USERNAME: enadzornik
-#      SPRING_DATASOURCE_PASSWORD: enadzornik
-#    depends_on:
-#      mariadb:
+  material-service:
+    build:
+      context: .
+      dockerfile: material-service/Dockerfile
+    container_name: enadzornik-material-service
+    ports:
+      - "8084:8084"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mariadb://mariadb:3306/enadzornik?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: enadzornik
+      SPRING_DATASOURCE_PASSWORD: enadzornik
+    depends_on:
+      - auth-service
+      - mariadb
 #        condition: service_healthy
-#    networks:
-#      - enadzornik-network
-#    restart: unless-stopped
-#
+    networks:
+      - enadzornik-network
+    restart: unless-stopped
+
 #  file-service:
 #    build:
 #      context: ./file-service
