--- a/audit-service/src/main/resources/application.yml
+++ b/audit-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 # material-service/src/main/resources/application.yml
 server:
-  port: 8084
+  port: 8086
 
 spring:
   application:
-    name: material-service
+    name: audit-service
   datasource:
     url: jdbc:mysql://localhost:3306/enadzornik?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: enadzornik
