--- a/audit-service/Dockerfile
+++ b/audit-service/Dockerfile
@@ -26,10 +26,10 @@ WORKDIR /app
 
 # Copy the built jar from build stage
 #COPY --from=build /app/target/*.jar app.jar
-COPY --from=build /app/audit-service/target/*.jar app.jar
+COPY --from=build /app/audit-service/target/*.jar audit-service.jar
 
 # Expose the port
 EXPOSE 8086
 
 # Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "audit-service.jar"]
