--- a/evaluation-service/src/main/resources/application.yml
+++ b/evaluation-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-# audit-service/src/main/resources/application.yml
+# evaluation-service/src/main/resources/application.yml
 server:
-  port: 8086
+  port: 8087
 
 spring:
   application:
@@ -20,6 +20,10 @@ spring:
   web:
     cors:
       allowed-origins: "*"
+# URL ka material-service (za ažuriranje statusa)
+material-service:
+  url: http://material-service:8084
+
 logging:
   level:
-    rs.enadzornik: DEBUG
+    rs.enadzornik.evaluationservice: DEBUG
