--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
                         </excludes>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.13.0</version>
+                    <configuration>
+                        <compilerArgs>
+                            <arg>-parameters</arg>
+                        </compilerArgs>
+                        <source>21</source>
+                        <target>21</target>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
